--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
   font-family: Arial, Helvetica, sans-serif;
   color:rgb(28, 1, 1);
+  width: 100%;
+  height:100vh;
+  margin:auto;
+  background-color: #f3eee9;
 
 }
 
@@ -20,7 +24,7 @@ body{
   display: block;
   text-decoration: inherit;
   color:inherit;
-  font-size: 40px;
+  font-size: 18px;
 
 }
 
@@ -30,13 +34,72 @@ body{
 }
 
 #hero{
-  margin: 40px 40px 150px;
+  margin: 40px 40px 100px;
+  color:rgb(0, 0, 0);
 }
 
 h1{
 
-text-align: right;
-margin-right: 30%;
-font-size: 64px;
+margin:auto;
+width:70%;
+font-size: 32px;
+font-family:Arial, Helvetica, sans-serif;
+color: rgb(0, 0, 0);
 
+}
+
+.project-family {
+  list-style-type: none;
+}
+
+.project-family-header{
+  display:flex;
+  margin-top:100px;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 3px solid rgb(14, 16, 172);
+}
+
+
+
+.projects{
+  margin:auto;
+  margin-top: 0px;
+  width:50%;
+  padding: 0;
+
+}
+
+.project-family-title{
+  font-size: 56px;
+  text-transform: uppercase;
+  text-align: left;
+  font-weight: bold;
+  flex-grow: 3;
+  margin-left: 20px;
+}
+
+
+
+footer {
+  background-color: #F4AB0E; 
+  padding: 20px;  
+  font-size: 14px; 
+  color: #BC4155; 
+  margin-top: 5%;
+  text-align: center;
+
+}
+
+
+#main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 100vh;
+}
+
+#hero-img {
+  width: 100%;
+  height: 500px;
 }
