--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 
 #hero li {
     float:right;
-      padding: 8px;
+    padding: 8px;
 }
 
 #hero ul {
@@ -28,44 +28,55 @@ body{
 
 }
 
+#hero a:active{
+  font-size: larger;
+}
 
 #hero li:nth-child(1) {
   float: left;
 }
 
 #hero{
-  margin: 40px 40px 100px;
+  margin: 40px 40px 80px;
   color:rgb(0, 0, 0);
+  font-family: "DM Mono", monospace;
+  font-weight: 300;
+  font-style: normal;
 }
 
 h1{
 
 margin:auto;
 width:70%;
-font-size: 32px;
-font-family:Arial, Helvetica, sans-serif;
+font-size: 28px;
 color: rgb(0, 0, 0);
+font-family: "DM Mono", monospace;
+  font-weight: 300;
+  font-style: normal;
 
 }
 
 .project-family {
   list-style-type: none;
+  width:100%;
+
 }
 
 .project-family-header{
   display:flex;
+  margin:auto;
+  width:50%;
   margin-top:100px;
   justify-content: space-between;
   align-items: center;
   border-bottom: 3px solid rgb(14, 16, 172);
+  cursor:pointer;
 }
 
 
 
 .projects{
-  margin:auto;
-  margin-top: 0px;
-  width:50%;
+  width:100%;
   padding: 0;
 
 }
@@ -83,8 +94,8 @@ color: rgb(0, 0, 0);
 
 footer {
   background-color: #F4AB0E; 
-  padding: 20px;  
-  font-size: 14px; 
+  padding: 10px;  
+  font-size: 12px; 
   color: #BC4155; 
   margin-top: 5%;
   text-align: center;
@@ -102,4 +113,23 @@ footer {
 #hero-img {
   width: 100%;
   height: 500px;
+}
+
+.work ul {
+  margin: auto;
+  width: 75%;
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px 10px;
+  padding-top: 10px;
+}
+
+.work ul li {
+  background-color: red;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
